# weisfeiler-leman-test

./: .gitignore  CMakeLists.txt  README.txt
include/: RadixSort.h  WeisfeilerLeman.h
src/: RadixSort.cpp  WeisfeilerLeman.cpp  main.cpp
